# Gemini-Co-CLI

./: .dockerignore  .env.example  .gitignore  CREATE_ISSUES_README.md  Cargo.toml  Dockerfile  ISSUES_TO_CREATE.md  LICENSE  README.md  create_issues.py  create_issues.sh  docker-compose.yml
scripts/: gemini-cli.py
src/: gemini.rs  main.rs  ssh.rs  state.rs  websocket.rs
src/mcp/: approval.rs  http.rs  mod.rs  server.rs  tools.rs
static/: app.js  index.html  style.css  test.html
