[package]
name = "gemini-co-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SSH client
russh = "0.44"
russh-keys = "0.44"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenvy = "0.15"

# UUID for session management
uuid = { version = "1.0", features = ["v4", "serde"] }

# Pin base64ct to version compatible with Rust 1.83
[dependencies.base64ct]
version = "=1.6.0"
